--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ plugins:
   - jekyll-seo-tag
   - jemoji
 favicon: true
-logo: /img/jaybird.png
+logo: /img/jaybird.svg
 email: prrvchr@gmail.com
 title: JaybirdOOo
 blank_title: true
