--- a/source/JaybirdOOo/build.properties
+++ b/source/JaybirdOOo/build.properties
@@ -1,4 +1,4 @@
 #UNO project Ant build configuration file
-#Wed Apr 30 13:28:59 CEST 2025
-office.install.dir=/lib/libreoffice
-sdk.dir=/lib/libreoffice/sdk
+#Tue May 20 11:06:16 CEST 2025
+office.install.dir=/opt/libreoffice7.6
+sdk.dir=/opt/libreoffice7.6/sdk
